--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,20 +1,15 @@
 .footer {
-    font-family: "CabinetGrotesk", serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    font-weight: 500;
 }
 
-.footer__name {
-    font-weight: 500;
+.footer__text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     font-size: 16px;
-    line-height: 20px;
-}
-
-.footer__year {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+    line-height: 22px;
+    letter-spacing: 0px;
+    color: #B6BCBF;
 }
