--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,3 +13,26 @@
     letter-spacing: 0px;
     color: #B6BCBF;
 }
+
+.footer__right {
+    display: flex;
+    gap: 40px;
+}
+
+.footer__link {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-decoration: none;
+    color: #B6BCBF;
+}
+
+.footer__link:hover {
+    color: #000;
+}
+
+.footer__link:active {
+    color: #8B8E90;
+}
