P16 Modal in progress

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -20,6 +20,10 @@
     border-radius: 1000%;
 }
 
+.about__image-container {
+    margin-left: 64px; 
+}
+
 .about__title {
     font-family: "Roboto-Slab", sans-serif;
     font-weight: 400;
