--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -71,7 +71,7 @@
   }
   
   /* Media Queries for Responsiveness */
-  @media screen and (max-width: 768px) {
+  /* @media screen and (max-width: 768px) {
     .main__container {
       min-height: 400px;
     }
@@ -101,4 +101,4 @@
       font-size: 16px;
       margin-bottom: 44px;
     }
-  }
+  } */
