--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,47 +1,49 @@
 .about {
-    width: 1440px;
-    height: 624px;
-    display: flex;
-    align-items: center;
-    gap: 56px;
-    padding: 0 40px;
+  max-width: 1440px;
+  min-height: 800px;
+  display: flex;
+  align-items: center;
+  gap: 56px;
+  padding: 0 40px;
 }
 
 .about__content {
-    display: flex;
-    flex-direction: column;
-    min-width: 600px;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  width: 100%;
+  gap: 24px;
 }
 
 .about__image {
-    width: 464px;
-    height: 464px;
-    border-radius: 1000%;
+  width: 464px;
+  height: 464px;
+  border-radius: 1000%;
 }
 
 .about__image-container {
-    margin-left: 64px; 
+  margin-left: 64px;
 }
 
 .about__title {
-    font-family: "Roboto-Slab", sans-serif;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 46px;
-    letter-spacing: 0px;
-    text-align: left;
-    color: #1A1B22;
+  font-family: "Roboto-Slab", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 46px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #1a1b22;
 }
 
 .about__text {
-    width: 600px;
-    height: 120px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0px;
-    text-align: left;
-    color: #1A1B22;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #1a1b22;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
