--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -5,13 +5,21 @@
   border: 4px solid #444;
   border-bottom-color: #888;
   border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   margin: auto;
   animation: spin .75s infinite linear;
+}
+
+.preloader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.preloader-message {
+  font-size: 16px;
+    color: #665;
+    margin: 0;
 }
 
 @keyframes spin {
