--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -51,3 +51,25 @@
     line-height: 24px;
     text-align: left;
   }
+
+  .saved-news__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+    padding: 62px 106px;
+    min-height: 282px;
+    width: 100%;
+    background-color: #F5F6F7;
+  }
+
+  @media screen and (max-width: 1100px) {
+    .saved-news__grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .saved-news__grid {
+      grid-template-columns: 1fr;
+    }
+  }
