--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,6 @@
 .news-card {
   width: 400px;
   height: 576px;
-  /* Add properties for card appearance like: */
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -20,6 +19,86 @@
   overflow: hidden;
 }
 
+.card__keyword {
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  width: 87px;
+  height: 40px;
+  background: white;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #000;
+  line-height: 24px;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card__trash-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: none;
+  border-radius: 10px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.card__trash-btn:hover .card__trash-icon {
+  filter: brightness(0.7);
+}
+
+.card__remove-tag {
+  width: 159px;
+  position: absolute;
+  right: 48px; 
+  top: 0;
+  background: white;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #000;
+  line-height: 24px;
+  padding: 8px 12px;
+  display: none; 
+}
+
+.card__trash-btn:hover .card__remove-tag {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+.card__bookmark-tag {
+  width: 182px;
+  position: absolute;
+  right: 48px; 
+  top: 0;
+  background: white;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #000;
+  line-height: 24px;
+  padding: 8px 12px;
+  display: none; 
+}
+
+.card__bookmark-btn:hover .card__bookmark-tag {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
 .card__bookmark-btn {
   position: absolute;
   top: 24px;
@@ -31,7 +110,6 @@
   border-radius: 10px;
   background-color: #fff;
   cursor: pointer;
-  z-index: 1;
 }
 
 .card__bookmark-icon {
@@ -58,7 +136,7 @@
   display: block;
   width: 128px;
   height: 24px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
   color: #b6bcbf;
 }
@@ -76,15 +154,16 @@
 .card__description {
   font-family: "Roboto", sans-serif;
   width: 352px;
-  height: 100%;
+  max-height: 110px;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
+  overflow: hidden;
 }
 
 .card__publisher {
   font-family: "Roboto-Slab", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   width: 352px;
   line-height: 20px;
