--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -48,6 +48,7 @@
     font-weight: 700;
     color: #1A1B22;
     width: 712px;
+    text-transform: capitalize;
     line-height: 24px;
     text-align: left;
   }
