P16 All Items Functioning, almost ready for submission

--- a/src/components/NewsSection/NewsSection.css
+++ b/src/components/NewsSection/NewsSection.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+    justify-content: center;
   }
 
 .news-section__error,
@@ -44,6 +45,7 @@
     width: 712px;
     text-align: left;
     letter-spacing: 0px;
+    padding-bottom: 32px;
 }
 
 .show-more-button {
@@ -62,3 +64,38 @@
     justify-content: center;
     align-items: center;
 }
+
+/* Tablet view (768px) */
+@media screen and (max-width: 768px) {
+    .news-section__results {
+      font-size: 30px;
+      width: 100%; /* Make it responsive */
+    }
+    
+    .news-section {
+      padding: 40px 40px;
+    }
+  
+    .news-section__cards {
+      justify-content: center;
+      gap: 8px; /* Reduce gap for tablet view */
+    }
+  }
+  
+  /* Mobile view (320px) */
+  @media screen and (max-width: 320px) {
+    .news-section__cards {
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+    
+    .news-section {
+      padding: 20px 16px;
+    }
+  
+    .news-section__results {
+      width: 100%;
+      text-align: left;
+    }
+  }
