--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -47,3 +47,55 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
+
+/* Tablet view (768px) */
+@media screen and (max-width: 768px) {
+  .about {
+    padding: 0 24px;
+    gap: 32px;
+  }
+
+  .about__image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .about__image-container {
+    margin-left: 32px;
+  }
+
+  .about__title {
+    font-size: 32px;
+    line-height: 38px;
+  }
+}
+
+/* Mobile view (320px) */
+@media screen and (max-width: 320px) {
+  .about {
+    flex-direction: column;
+    padding: 0 16px;
+    gap: 24px;
+  }
+
+  .about__image {
+    width: 272px;
+    height: 272px;
+    padding-top: 20px;
+  }
+
+  .about__image-container {
+    margin-left: 0;
+  }
+
+  .about__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .about__text {
+    font-size: 16px;
+    line-height: 22px;
+    padding-bottom: 20px;
+  }
+}
