--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -36,3 +36,41 @@
 .footer__link:active {
     color: #8B8E90;
 }
+
+@media screen and (max-width: 768px) {
+    .footer {
+        padding: 10px 15px;
+    }
+    
+    .footer__right {
+        gap: 20px;
+    }
+}
+
+/* Mobile viewport (320px) */
+@media screen and (max-width: 320px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px;
+    }
+
+    .footer__right {
+        width: 100%;
+        flex-wrap: wrap;
+        gap: 15px;
+        margin-bottom: 15px;
+        order: 1;
+    }
+
+    .footer__left {
+        width: 100%;
+        text-align: center;
+        order: 2;
+    }
+
+    .footer__link {
+        width: calc(50% - 15px);
+        text-align: center;
+    }
+}
