--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -54,7 +54,7 @@
 }
 
 .modal__content--register {
-  height: 460px;  
+  height: 460px;
 }
 
 .modal__content--login {
@@ -114,7 +114,7 @@
 .modal__submit:disabled {
   width: 358px;
   height: 64px;
-  background-color: #E6E8EB;
+  background-color: #e6e8eb;
   border: none;
   cursor: not-allowed;
   opacity: 0.5;
@@ -152,4 +152,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 320px) {
+  .modal__content {
+    height: 560px;
+    top: -90px;
+  }
+
+  .modal__input {
+    width: 250px;
+  }
+
+  .modal__submit {
+    width: 250px;
+  }
+
+  .modal__submit:disabled {
+    width: 250px;
+  }
+
+  .modal__close {
+    top: 16px;
+    right: 16px;
+    width: 24px;
+    height: 24px;
+    z-index: 2;
+  }
+
+  .modal__close-btn {
+    left: 0;
+    width: 24px;
+    height: 24px;
+    background-size: contain;
+  }
 }
