--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -172,3 +172,59 @@
   color: #b6bcbf;
   margin-top: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .news-card {
+    width: 224px;
+    height: 420px; /* Adjust height proportionally */
+  }
+
+  .card__image-container {
+    width: 224px;
+    height: 152px; /* Adjust height proportionally */
+  }
+
+  .card__title {
+    width: 192px;
+    font-size: 22px;
+    height: 48px;
+  }
+
+  .card__description {
+    width: 192px;
+    font-size: 16px;
+  }
+
+  .card__publisher {
+    width: 192px;
+    margin-top: 20px;
+  }
+}
+
+/* Mobile view (320px) */
+@media screen and (max-width: 320px) {
+  .news-card {
+    width: 288px;
+    min-height: 440px;
+    height: auto;
+  }
+
+  .card__image-container {
+    width: 288px;
+    height: 196px;
+  }
+
+  .card__title {
+    width: 256px;
+    font-size: 22px;
+  }
+
+  .card__description {
+    width: 256px;
+  }
+
+  .card__publisher {
+    width: 256px;
+    margin-bottom: 16px;
+  }
+}
