--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,45 +1,67 @@
 .search-form {
-    position: relative;
-    width: 608px;
-    height: 64px;
+  position: relative;
+  width: 608px;
+  height: 64px;
+}
+
+.search-form__input {
+  width: 100%;
+  height: 100%;
+  padding: 0 20px;
+  border: 1px solid #d1d2d6;
+  border-radius: 100px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0px;
+}
+
+.search-form__button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  padding: 0 20px;
+  width: 168px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  background: #2f71e5;
+  border: none;
+  border-radius: 100px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.search-form__button:hover {
+  background: #347eff;
+}
+
+.search-form__button:active {
+  background: #1d5ec2;
+}
+
+/* Mobile view (320px) */
+@media screen and (max-width: 320px) {
+  .search-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    gap: 16px;
   }
-  
+
   .search-form__input {
-    width: 100%;
-    height: 100%;
-    padding: 0 20px;
-    border: 1px solid #D1D2D6;
-    border-radius: 100px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0px;
+    position: static;
+    width: 288px;
+    margin-right: 0;
   }
-  
+
   .search-form__button {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    padding: 0 20px;
-    width: 168px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0px;
-    background: #2F71E5;
-    border: none;
-    border-radius: 100px;
-    cursor: pointer;
-    color: #ffffff;
+    position: static;
+    width: 288px;
   }
-
-  .search-form__button:hover {
-    background: #347EFF;
-  }
-
-  .search-form__button:active {
-    background: #1D5EC2;
-  }
+}
