--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -57,15 +57,16 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
-    padding: 62px 106px;
+    padding: 62px 102px;
     min-height: 282px;
     width: 100%;
     background-color: #F5F6F7;
   }
 
+  /* Media Queries */
   @media screen and (max-width: 1100px) {
     .saved-news__grid {
-      padding: 62px 40px;  /* Reduce the side padding */
+      padding: 62px 40px;
     }
   }
 
