--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -17,6 +17,10 @@
   letter-spacing: 0px;
 }
 
+.search-form__input:focus {
+  outline: none;
+}
+
 .search-form__button {
   position: absolute;
   right: 0;
@@ -44,7 +48,7 @@
   background: #1d5ec2;
 }
 
-/* Mobile view (320px) */
+/* Media Queries */
 @media screen and (max-width: 320px) {
   .search-form {
     display: flex;
