--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -48,6 +48,13 @@
   overflow-wrap: break-word;
 }
 
+@media screen and (min-width: 769px) and (max-width: 1080px) {
+  .about__image {
+    width: 232px;
+    height: 232px;
+  }
+}
+
 /* Tablet view (768px) */
 @media screen and (max-width: 768px) {
   .about {
@@ -56,8 +63,8 @@
   }
 
   .about__image {
-    width: 300px;
-    height: 300px;
+    width: 232px;
+    height: 232px;
   }
 
   .about__image-container {
@@ -69,6 +76,36 @@
     line-height: 38px;
   }
 }
+
+@media screen and (min-width: 321px) and (max-width: 620px) {
+  .about {
+    flex-direction: column;
+    padding: 0 16px;
+    gap: 24px;
+  }
+
+  .about__image {
+    width: 272px;
+    height: 272px;
+    padding-top: 20px;
+  }
+
+  .about__image-container {
+    margin-left: 0;
+  }
+
+  .about__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .about__text {
+    font-size: 16px;
+    line-height: 22px;
+    padding-bottom: 20px;
+  }
+}
+
 
 /* Mobile view (320px) */
 @media screen and (max-width: 320px) {
