--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,17 @@
   text-align: center;
 }
 
+app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+  position: relative;
+}
+
 .card {
   padding: 2em;
 }
