--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,76 +1,87 @@
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
 .footer__text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    letter-spacing: 0px;
-    color: #B6BCBF;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 0px;
+  color: #b6bcbf;
 }
 
-.footer__right {
-    display: flex;
-    gap: 40px;
+.footer__navigation {
+  display: flex;
+  gap: 40px;
 }
 
 .footer__link {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0px;
-    text-decoration: none;
-    color: #000;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-decoration: none;
+  color: #000;
 }
 
 .footer__link:hover {
-    color: #B6BCBF;
+  color: #b6bcbf;
 }
 
 .footer__link:active {
-    color: #8B8E90;
+  color: #8b8e90;
 }
 
 /* Media Queries */
 @media screen and (max-width: 768px) {
-    .footer {
-        padding: 10px 15px;
-    }
-    
-    .footer__right {
-        gap: 20px;
-    }
+  .footer {
+    padding: 10px 15px;
+  }
+
+  .footer__navigation {
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .footer {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 15px;
-    }
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px 16px;
+  }
 
-    .footer__right {
-        width: 100%;
-        flex-wrap: wrap;
-        gap: 15px;
-        margin-bottom: 15px;
-        order: 1;
-    }
+  .footer__navigation {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 38px;
+  }
 
-    .footer__left {
-        width: 100%;
-        text-align: center;
-        order: 2;
-    }
+  .footer__link:nth-child(-n + 2) {
+    width: 50%;
+    text-align: left;
+  }
 
-    .footer__link {
-        width: calc(50% - 15px);
-        text-align: center;
-    }
+  .footer__link:nth-child(n + 3) {
+    width: auto;
+    margin-left: auto;
+    margin-top: -45px;
+    text-align: right;
+  }
+
+  .footer__copyright {
+    width: 100%;
+    text-align: center;
+    order: 2;
+  }
+
+  .footer__link {
+    width: calc(50% - 15px);
+    text-align: center;
+  }
 }
