--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,12 @@
 .header {
-  width: 100%;
   height: 80px;
   position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
   z-index: 1;
   background-color: transparent;
   border-bottom: 1px solid rgba(229, 229, 229, 0.3);
+  margin: 0;
 }
 
 .header-content {
@@ -22,6 +21,17 @@
 }
 
 .header__logo {
-  width: 200px;
+  width: 117px;
   height: 24px;
+  padding-bottom: 40px;
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    height: 56px;
+  }
+
+  .header-content {
+    padding: 0 16px;
+  }
 }
