--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -47,7 +47,7 @@
 }
 
 .main__search {
-  width: 608px;
+  width: 100%;
   max-width: 608px;
   margin: 0 auto;
 }
@@ -64,7 +64,7 @@
 
 .main__cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
   gap: 16px;
   margin: 0;
   padding: 0;
@@ -73,6 +73,10 @@
 
 /* Media Queries */
 @media screen and (max-width: 320px) {
+  .main__content {
+    padding: 16px;
+    padding-top: 46px;
+  }
   .main__title {
     font-size: 36px;
     line-height: 40px;
@@ -84,5 +88,44 @@
     font-size: 18px;
     margin-top: 16px;
     text-align: left;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 607px) {
+  .main__content {
+    padding: 10px;
+  }
+
+  .main__title {
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+    margin: 0 0 24px;
+    padding: 0;
+  }
+
+  .main__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 0 40px;
+    padding: 0 10px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 607px) {
+  .main__content {
+    padding: 20px;
+  }
+
+  .main__cards {
+    grid-template-columns: 1fr;
+  }
+
+  .main__title {
+    font-size: 40px;
+    line-height: 44px;
+    height: auto;
+    margin-bottom: 24px;
   }
 }
