--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -83,5 +84,9 @@
   .footer__link {
     width: calc(50% - 15px);
     text-align: center;
+  }
+
+  .footer__text {
+    padding-bottom: 22px;
   }
 }
