--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -49,7 +49,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 365px) {
   .footer {
     flex-direction: column;
     align-items: flex-start;
@@ -70,7 +70,7 @@
 
   .footer__link:nth-child(n + 3) {
     width: auto;
-    margin-left: auto;
+    margin-left: 30px;
     margin-top: -45px;
     text-align: right;
   }
