--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -43,6 +43,7 @@
   line-height: 24px;
   text-align: left;
   margin-top: 30px;
+  padding-bottom: 20px;
 }
 
 .saved-news__keywords-list {
@@ -55,6 +56,10 @@
   text-transform: capitalize;
   line-height: 24px;
   text-align: left;
+}
+
+.saved-news__empty {
+  padding: 40px;
 }
 
 .saved-news__grid {
