--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,10 @@
 .about {
-  max-width: 1440px;
   min-height: 624px;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 56px;
-  padding: 0 40px;
+  padding: 0 104px;
 }
 
 .about__content {
