--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.header-wrapper {
+  width: 100%;
+}
+
 .header {
   height: 80px;
   position: relative;
@@ -13,7 +17,7 @@
   width: 100%;
   height: 80px;
   margin: 0 auto;
-  padding: 16px 24px;
+  padding: 16px 104px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,6 +26,12 @@
 .header__logo {
   width: 117px;
   height: 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .header-content {
+    padding: 20px;
+  }
 }
 
 @media screen and (max-width: 320px) {
