--- a/src/components/NewsSection/NewsSection.css
+++ b/src/components/NewsSection/NewsSection.css
@@ -1,22 +1,19 @@
 .news-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 80px 104px;
   min-height: 282px;
   width: 100%;
   background-color: #f5f6f7;
 }
 
-.news-section__container {
-  display: flex;
-  flex-direction: column;
-}
-
 .news-section__cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  /* padding: 62px 10%; */
   min-height: 282px;
-  width: 100%;
+  max-width: 1440px;
   background-color: #f5f6f7;
   box-sizing: border-box;
 }
@@ -51,7 +48,8 @@
   font-size: 40px;
   font-weight: 400;
   line-height: 46px;
-  width: 712px;
+  max-width: 712px;
+  max-width: 100%;
   text-align: left;
   letter-spacing: 0px;
   padding-bottom: 32px;
