--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -1,12 +1,22 @@
 .saved-news {
   margin-top: 80px;
   width: 100%;
-  background-color: #f5f6f7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .saved-news__header {
-  padding: 40px 10%;
+  width: 100%;
   background-color: #fff;
+}
+
+.saved-news__header-content {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 40px 104px;
+  box-sizing: border-box;
 }
 
 .saved-news__title {
@@ -58,6 +68,10 @@
   text-align: left;
 }
 
+.saved-news__container {
+  background-color: #f5f6f7;
+}
+
 .saved-news__empty {
   padding: 40px;
 }
@@ -66,9 +80,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  padding: 62px 10%;
+  padding: 62px 104px;
   min-height: 282px;
+  max-width: 1440px;
   width: 100%;
+  margin: 0 auto;
   background-color: #f5f6f7;
   box-sizing: border-box;
 }
@@ -77,6 +93,12 @@
 @media screen and (max-width: 1100px) {
   .saved-news__grid {
     padding: 62px 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .saved-news__header-content {
+    padding: 40px;
   }
 }
 
@@ -97,6 +119,10 @@
 @media screen and (max-width: 320px) {
   .saved-news__header {
     padding: 8px 16px;
+  }
+
+  .saved-news__header-content {
+    padding: 10px;
   }
 
   .saved-news__title {
